--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ fastapi==0.86.0
 gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
+numpy==1.23.4
 outcome==1.2.0
-pandas==1.3.5
+pandas==1.5.1
 pipreqs==0.4.11
 pycodestyle==2.9.1
 pycparser==2.21
